--- a/package.json
+++ b/package.json
@@ -6,10 +6,23 @@
     "start": "next start"
   },
   "dependencies": {
+    "@faker-js/faker": "^8.3.1",
+    "axios": "^1.6.2",
+    "chai": "^4.3.10",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "jest": "^29.7.0",
+    "lyrics-finder": "^21.7.0",
+    "method-override": "^3.0.0",
+    "mocha": "^10.2.0",
+    "mongoose": "^8.0.3",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "spotify-web-api-node": "^5.0.2",
+    "supertest": "^6.3.3"
   },
   "engines": {
     "node": ">=18"
