--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jest": "^29.7.0",
+    "js-cookie": "^3.0.5",
     "lyrics-finder": "^21.7.0",
     "method-override": "^3.0.0",
     "mocha": "^10.2.0",
