--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.12.0",
+    "react-toastify": "^9.1.3",
     "spotify-web-api-node": "^5.0.2",
     "supertest": "^6.3.3"
   },
