--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "mocha": "^10.2.0",
     "mongoose": "^8.0.3",
     "next": "latest",
+    "next-auth": "^4.24.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.12.0",
+    "react-spotify-web-playback": "^0.14.1",
     "react-toastify": "^9.1.3",
+    "recoil": "^0.7.7",
     "spotify-web-api-node": "^5.0.2",
     "supertest": "^6.3.3"
   },
