--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "next": "latest",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "react-router-dom": "^6.21.1"
   },
   "engines": {
     "node": ">=18"
