--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 
-NEXT_PUBLIC_HEROKU_SERVER_URL=https://spoti-chat-41fc1f2f3950.herokuapp.com
+# NEXT_PUBLIC_HEROKU_SERVER_URL=https://spoti-chat-41fc1f2f3950.herokuapp.com
+NEXT_PUBLIC_HEROKU_SERVER_URL=http://127.0.0.1:5000
 NEXT_PUBLIC_LOCAL_SERVER_URL=http://localhost:8000
 
